# libskrand

./: CMakeLists.txt  README.md  mt.cc  mt.h  mt_test.cc
include/: lcg.h  mt.h
src/: lcg_test.cc  mt.cc  mt_test.cc
